@@ -26,7 +26,7 @@ setup(
     install_requires=[
         'Whoosh',
         'beautifulsoup4>=4.3.2',
-        'devpi-server>=2.1.4.dev0',
+        'devpi-server>=2.2.0.dev0',
         'devpi-common>=2.0.5.dev0',
         'docutils>=0.11',
         'pygments>=1.6',
